--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,9 +11,9 @@ endif()
 #add_executable(astar "src/astar_demo.cpp")
 
 file( GLOB APP_SOURCES src/*.cpp )
-SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} /FI\"msvc/alg_vs.h\"" ) 
-message( ${CMAKE_CXX_FLAGS} )
+#SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} /FI\"msvc/alg_vs.h\"" )
+#message( ${CMAKE_CXX_FLAGS} )
 foreach( appsourcefile ${APP_SOURCES} )
 	get_filename_component( demo_name ${appsourcefile} NAME_WE )
-	add_executable( ${demo_name} ${appsourcefile} )
+	add_executable( ${demo_name} ${appsourcefile} src/a_datastruct_linerlist.cpp src/aaa_d_linerlist.h)
 endforeach( appsourcefile ${APP_SOURCES} )
